Modularized files, updated Makefile, updated README.

--- a/RE2NFA/Makefile
+++ b/RE2NFA/Makefile
@@ -1,8 +1,11 @@
-RE2NFA: main.o
-	gcc -g -o main main.o
+RE2NFA: main.o stack.o
+	gcc -g -o RE2NFA main.o stack.o
 
 main.o: main.c
 	gcc -g -c main.c
 
+stack.o: stack.c
+	gcc -g -c stack.c
+
 clean:
-	rm -f RE2NFA main.o
+	rm -f RE2NFA main.o stack.o
